--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           access-type: jwt
           export-secrets-to-outputs: true
           export-secrets-to-environment: true
-          api-url: "https://csm.thalescryptolabs.com/akeyless-api/v2"
+          api-url: "https://csm.thalescryptolabs.com/akeyless-api/"
           static-secrets: |
             - name: "/secret/Jenkins/Jenkins"
               output-name: "my_first_secret"
