--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           static-secrets: |
             - name: "/secret/Jenkins/Jenkins"
               output-name: "my_first_secret"
-          api-url: "https://csm.thalescryptolabs.com/akeyless-api/v2"
+          api-url: "https://api.akeyless.io"
       - name: Use Akeyless secret (environment variable)
         env:
           SECRET: ${{ env.my_first_secret }}
